...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecordRideFragment">


    <TextView
        android:id="@+id/tvFragTitelTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Record Ride"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStartRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStopRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/tvDistanceTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Distance"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
...
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="Average Speed"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDistanceVar" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="36dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFragTitelTraining" />

    <TextView
        android:id="@+id/tvTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Time"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/tvElapsedTimeVar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="-"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvDistanceTitel"
        app:layout_constraintStart_toStartOf="@+id/tvDistanceTitel"
        app:layout_constraintTop_toBottomOf="@+id/tvDistanceTitel" />

    <TextView
        android:id="@+id/tvAverageSpeedVar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="-"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvAverageSpeedTitel"
...
